Added Maven dependency caching (#681)